# encryptx_pro

./: .gitignore  LICENSE  README.md  encryptx_pro.spec
AppDir/: .DirIcon  AppRun
AppDir/usr/share/applications/: encryptx_pro.desktop
encryptx_pro/: pyproject.toml
encryptx_pro/src/encryptx_pro.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
encryptx_pro/tests/: test_crypto.py
encryptxpro-deb/DEBIAN/: control
encryptxpro-deb/usr/share/applications/: encryptx_pro.desktop
src/encryptx_pro/: crypto.py  gui.py  gui.py.bak  vault_test.py  vault_window.py.bak
src/encryptx_pro.egg-info/: requires.txt
src_backup/encryptx_pro/: cli.py  crypto.py  vault.py
